--- a/package.json
+++ b/package.json
@@ -1,1 +1,12 @@
 
+{
+  "name": "receitafit",
+  "version": "1.0.0",
+  "description": "ReceitaFit - Receitas Fitness",
+  "scripts": {
+    "dev": "vercel dev"
+  },
+  "dependencies": {
+    "mercadopago": "^2.0.15"
+  }
+}
